Prevent long contacts overflowing section
On some pages, long email addresses are overflowing the contact section into the corporate information section next to it.
We can prevent this by wrapping long text.

--- a/app/assets/stylesheets/views/_organisations.scss
+++ b/app/assets/stylesheets/views/_organisations.scss
@@ -155,3 +155,7 @@
 .organisation__contact-number {
   margin-bottom: $gutter-one-third;
 }
+
+.organisation__contact-section {
+  word-wrap: break-word;
+}
